2009-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* .gitignore: New file, for those using git-svn at home and to prepare for
	GNOME's git migration.

2009-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Daap/Daap/Client.cs:
	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapProxyWebServer.cs:
	* src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/IpodSource.cs:
	* src/Core/Banshee.Services/Banshee.Base/ThreadAssist.cs:
	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	* src/Core/Banshee.Core/Banshee.Kernel/Scheduler.cs:
	* src/Libraries/Migo/Migo.TaskCore/TaskGroup.cs: Name threads so
	kill -s QUIT thread dumps are easier to grok.

2009-01-25  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Backends/Banshee.NowPlaying.X11/libbnpx11/bacon-resize.h: Patch
	from Przemysław Grzegorczyk to clean up gtk includes to use only toplevel
	headers (BGO #565027).

2009-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/OverlayWindow.cs:
	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapPropertiesDialog.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/BansheeDialog.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/CellEditEntry.cs:
	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/FilteredListSourceContents.cs:
	* src/Core/Banshee.Services/Banshee.Hardware/IVolume.cs:
	* src/Core/Banshee.Core/Banshee.Streaming/StreamTagger.cs:
	* src/Backends/Banshee.Hal/Banshee.HalBackend/CdromDevice.cs:
	* src/Backends/Banshee.Hal/Banshee.HalBackend/UsbDevice.cs:
	* src/Backends/Banshee.Hal/Banshee.HalBackend/DiskDevice.cs:
	* src/Libraries/Hyena/Hyena/Log.cs:
	* src/Libraries/Hyena.Gui/Hyena.Widgets/SegmentedBar.cs: Fix compilation
	issues when building with Mono 2.2

2009-01-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/FilteredListSourceContents.cs:
	Enable smooth (kinetic) scrolling of track/artist/album etc lists (all but